--- a/style.css
+++ b/style.css
@@ -21,5 +21,21 @@ body{
 .nav{
     display: flex;
     gap:16px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
 }
+.nav a{
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 700;
+}
+
+
 
